--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DIR="/Users/henri_sedjame/Desktop/viz/plugins/target/wasm32-unknown-unknown/debug"
+PLUGINS_DIR="/plugins/target/wasm32-unknown-unknown/debug"
 ALLOWED_ORIGINS="http://localhost:3000"
