--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["multipart"]}
 tower-http = { version =  "0.5.2", features = [ "fs", "cors"] }
 dotenv = "0.15.0"
 tokio = {version = "1.36.0", features = ["full"]}
+multer = "3.0.0"
+serde = { version = "1.0.197" , features = ["derive"] }
+serde_json = "1.0.114"
